Lexiconner/Lexiconner.Web/wwwroot/styles/index.css
body, html{
    width: 100%;
    height: 100%;
    margin-bottom: 0%;
    margin-left: 0%;
    margin-right: 0%;
    margin-top: 0%;
}

:root{
     --background-color: #252323;
    --text-color: #fff;
    --menu-background-color: #181a27;
    --card-background-color: #232644;
    --card-list-item-background-color: #232644;
    --card-lighter-color: #30355d;
    --card-darker-color: #20233e;
    --bottom-color: #4f9da6;
    --example-background-color: #35849c;
    --menu-item-font-color: #fff;
    --button-red-color: brown;
    --block-bottom-width: 13%;
    --block-bottom-height: 10%;
}

/* #region General classes */

.hidden {
    display: none;
}

/* #endregion */

.app-container{
    width:100%;
    height:100%;
}

.main-block{
    background-color: var(--background-color);
    width: 100%;
    min-height: 90%;
    height: auto;
}

.dashboard-container {
    color: var(--text-color);
}

.dashboard-container .main-title {
    text-align: center;
    font-size: 2em;
    margin: 0 0 1em 0;
}

.info-container .info-row {
    margin: 0 0 0.5em;
    font-size: 1.75em;
    text-align: center;
}
.info-container .info-row:last-child {
    margin-bottom: 0;
}

.info-container .info-image {
    width: auto;
    height: auto;
    max-height: 7em;
}
.info-container .info-image--top {
    max-height: 13em;
}


.main-block-card{
    /* display: none; */
    background-color: var(--background-color);
    width: 100%;
    height: 100%;
}

.card-block-container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: auto;
    width: 100%;
    align-items: center;
    padding: 3em 0 0 0;
}

.card-button {
    text-align: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background: none;
    height: 100%;
    width: 36%;
    text-align: center;
    border-radius: 14px;
    cursor: pointer;
    opacity: 0.75;
    color: #fff;
}
.card-button:hover {
    opacity: 1;
}

.card-button-icon {
    font-size: 400%;
}

.card-block{
    background-color:var(--card-background-color);
    color: var(--text-color);
    border-radius: 3px;
    width: 28%;
    height: 100%;
    padding: 0.75em;
    display: flex;
    flex-direction: column;
    margin: 0;
    box-sizing: border-box;
}

.title{
    width: 100%;
    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
    text-align: center;
    overflow-x: hidden;
    overflow-y: auto;
    text-overflow: ellipsis;
    font-size: 200%;
    height: auto;
    padding: 0 0 0.5em 0;
    margin-bottom: 0.5em;
}

.description{
    width: 100%;
    height: auto;
    min-height: 3em;
    font-size: 1em;
    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0 0 0.5em 0;
    margin-bottom: 0.5em;
}

.example-block{
    font-size: 0.95em;
    width: 100%;
    height: auto;
    border-radius: 1px;
    overflow: auto;
}

.example-text{
    background-color: var(--example-background-color);
    padding: 0.25em;
    margin: 0 0 0.5em 0;
    overflow-x: hidden;
    overflow-y: auto;
}

.example-picture {
    width: 100%;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.example-picture img {
    width: 100%;
    height: auto;
}

/* menu */

.main-block-menu{
    background-color: var(--background-color-menu);
    width: 100%;
    height: 10%;
    overflow-y: hidden;
}


.menu{
  width: 100%;
    height: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    overflow-y: auto;
    background-color: var(--menu-background-color);
}
.menu-item{
    height: 100%;
    margin: 0;
    padding: 0.9%;
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto;
    background-color: var(--menu-background-color);
    opacity: 1;
    color: var(--menu-item-font-color);
    box-sizing: border-box;
    text-align: center;
    text-overflow: ellipsis;
    font-size: 100%;
}

.menu-item.active {
    color: orangered;
}

.menu-page-container {
    display: none;
    width: 100%;
    height: auto;
       padding: 1em 0 1em 0;
    box-sizing: border-box;
}

.menu-page-container.active {
    display: block;
}

/* all data items review*/

.item-list-container {
    margin: 0 1% 0 1%;
    padding: 0;
}

.item-list {
    margin: 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}


.list-item {
    width: 19.6%;
    height: 60px;
    margin: 0.5% 0.5% 0 0;
    background-color: var(--card-list-item-background-color);
    color: var( --text-color);
    text-align: center;
    overflow: auto;
    font-size: 100%;
    padding: 0.5em;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    cursor: pointer;
}

.list-item-text {
    display: block;
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.list-item:hover {
    background-color: var(--card-lighter-color);
}

.list-item:nth-child(-n + 5) {
    margin-top: 0;
}
.list-item:nth-child(5n) {
    margin-right: 0;
}

.list-item--hidden {
    display: none;
}

.item-list-pager {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 1em 0;
}

.item-list-pager__button {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    font-size: 1.5em;
    color: var( --text-color);
    padding: 0.25em;
    background-color: var(--button-red-color);
    margin: 0 0.25em 0 0;
    border-radius: 2px;
    cursor: pointer;
}
.item-list-pager__button:last-child {
    margin-right: 0;
}

.item-list-pager__button .button-icon {
}

